Fixed social media icons padding on small devices.

--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -213,7 +213,6 @@
 
         #social .social_media {
             position: relative;
-            padding: 8px 18px;
             border-radius: 25px;
         }
         
